--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 @tailwind utilities;
 
 body {
-  /* yellow hex color:   */
 	background: linear-gradient(-30deg, #ee7752, #e73c7e, #FFD700, #AFE1AF);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
@@ -24,5 +23,5 @@ body {
 }
 
 .bb {
-  border: 1px solid red;
+  border: 2px solid green;
 }
